feat : 폰트 조절, 포스팅 내용 수정

--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: About Me
-description: This is what I do.
+description: 기술연구소&개발팀 구성원들
 background: '/img/bg-about.jpg'
 ---
 
