feat : 포스팅 내용 수정

--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 ---
 layout: page
 title: About Us
-description: 에어릭스의 IT개발자들을 소개합니다.
+description: 에어릭스 환경시스템사업부
 background: '/img/bg-about.jpg'
 ---
+
 
 
